kubernetes/base-apps/network/traefik/components/git-pages/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: git-pages
  labels:
    local/gateway-role: internal
spec:
  gatewayClassName: internal
  listeners:
    - name: git-pages
      port: 8444
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: git-pages-secure
      port: 8444
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - name: wildcard-tls-secret
            namespace: cert-manager
